# xdg-desktop-portal-tde

./: .gitignore  CMakeLists.txt  ConfigureChecks.cmake  README.md  config.h.cmake
interfaces/: CMakeLists.txt  filechooser.xml  org.freedesktop.impl.portal.desktop.tde.service.cmake  tde.portal  xdg-desktop-portal-tde.desktop.cmake
src/: CMakeLists.txt  file_chooser_portal.cpp  file_chooser_portal.h  main.cpp  portal.cpp  portal.h  portal_service.cpp  portal_service.h  util.h
